[package]
name = "btrblocks-rs"
version = "0.1.0"
edition = "2021"
authors = ["Emre Bicer <oebicer@gmail.com>"]

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.133"
temp-dir = "0.1.14"
datafusion = { version = "43.0.0" }
datafusion-expr = { version = "43.0.0" }
datafusion-physical-expr = { version = "43.0.0" }
async-trait = { version = "0.1.41" }
serde = { version = "1.0", features = ["derive"]}
futures = "0.3.31"
thiserror = { version = "1.0.58" }
object_store = { version = "0.11.2", features = ["aws", "gcp"] }
url = "2.5.4"
fuser = "0.15.1"
libc = "0.2.169"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }

# Optional dependencies for the binary target
clap = { version = "4.5.21", optional = true, features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
rand = "0.8.5"
num = "0.4"
serial_test = "3.2.0"

[build-dependencies]
cxx-build = "1.0.133"
cmake = "0.1"
git2 = "0.18.2"

[[bin]]
name = "btr"
path = "src/bin/btr.rs"
required-features = ["cli"]

[features]
cli = ["clap", "serde_yaml"]
